# gitorg

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  display.rs  error.rs  main.rs
src/commands/: auth.rs  issues.rs  mod.rs  orgs.rs  overview.rs  repos.rs  stale.rs  stats.rs
src/github/: client.rs  mod.rs
tests/: cli.rs
